--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bloc_filter_search_list
+name: flutter_bloc_list_manager
 version: 0.0.1
 description: >
   Extension to flutter_bloc that handles the underlying logic to filter and search list view data dynamically.
