--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 0.0.1
 description: >
   Extension to flutter_bloc that handles the underlying logic to filter and search list view data dynamically.
 author: Dana Hartweg <dana.hartweg@gmail.com>
-homepage: https://github.com/danahartweg
+homepage: https://github.com/danahartweg/flutter_bloc_list_manager
 
 environment:
   sdk: ">=2.3.0 <3.0.0"
