--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v1.3.x
         with:
           flutter-version: "1.17.x"
           channel: "stable"
@@ -20,4 +20,4 @@ jobs:
       - name: Test
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
       - name: Code coverage
-        uses: ChicagoFlutter/lcov-cop@v1
+        uses: ChicagoFlutter/lcov-cop@v1.0.x
