--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,9 +6,6 @@ on:
 
 jobs:
   build:
-    defaults:
-      run:
-        working-directory: ./
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       - name: Analyze
-        run: flutter analyze lib test
+        run: flutter analyze--no-pub
       - name: Test
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
       - name: Code coverage
