--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,16 +9,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      # If the package version has changed, we want to make sure there's a changelog entry
+      # and that it conforms to the keepachangelog format.
+      - name: Check pub version
+        id: check_version
+        uses: ZerNico/pubspec-version-check@v1.1
+
+      - uses: zattoo/changelog@v1
+        if: ${{ steps.check_version.outputs.changed == true }}
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: subosito/flutter-action@v1.3.2
         with:
           flutter-version: "1.17.x"
           channel: "stable"
+
       - name: Install dependencies
         run: flutter pub get
+
       - name: Analyze
         run: flutter analyze --no-pub
+
       - name: Test
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
+
       - name: Code coverage
         uses: ChicagoFlutter/lcov-cop@v1.0.2
         with:
