--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,3 +33,4 @@ jobs:
         uses: zattoo/changelog@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          sources: "lib/, test/"
