--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -35,11 +35,7 @@ jobs:
         shell: bash
         run: |
           GLOBAL_RESULT=`flutter pub global activate --no-executables flutter_bloc_list_manager`
-          bash --version
-          grep --version
-          sed --version
-          echo $GLOBAL_RESULT | grep -zoP 'Activated flutter_bloc_list_manager\s\K(.*)' | rev | cut -c 2- | rev
-          echo ::set-env name=version::$(echo $GLOBAL_RESULT | grep -zoP 'Activated flutter_bloc_list_manager\s\K(.*)' | rev | cut -c 2- | rev)
+          echo ::set-output name=version::$(echo $GLOBAL_RESULT | grep -zoP 'Activated flutter_bloc_list_manager\s\K(.*)' | rev | cut -c 2- | rev)
 
       - uses: andymckay/cancel-action@0.2
         if: ${{ steps.local_version.outputs.version == steps.remote_version.outputs.version }}
