--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,17 +9,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: subosito/flutter-action@v1.3.2
         with:
           flutter-version: "1.17.x"
           channel: "stable"
+
       - name: Install dependencies
         run: flutter pub get
+
       - name: Analyze
         run: flutter analyze --no-pub
+
       - name: Test
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
+
       - name: Code coverage
         uses: ChicagoFlutter/lcov-cop@v1.0.2
         with:
           min_coverage: 75
+
+      - name: Validating changelog
+        uses: zattoo/changelog@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
