--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,5 @@
+include: package:flutter_lints/flutter.yaml
+
 analyzer:
   exclude:
-    - example/*
-
-include: package:effective_dart/analysis_options.1.2.0.yaml
+    - example/**
