--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: subosito/flutter-action@v1.3.2
+      - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "1.17.x"
+          flutter-version: "2.8.x"
           channel: "stable"
 
       - name: Install dependencies
@@ -25,7 +25,7 @@ jobs:
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
 
       - name: Code coverage
-        uses: ChicagoFlutter/lcov-cop@v1.0.2
+        uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
         with:
           min_coverage: 75
 
