--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,23 @@
 name: flutter_bloc_list_manager
-version: 0.4.0
+version: 0.5.0
 description: >
   Extension to flutter_bloc that handles the underlying logic to filter and search list view data dynamically.
 homepage: https://github.com/danahartweg/flutter_bloc_list_manager
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  bloc: ^6.0.0
-  equatable: ^1.1.0
-  flutter_bloc: ^6.0.0
-  meta: ^1.1.8
+  bloc: ^8.0.2
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  bloc_test: ^7.0.0
-  effective_dart: ^1.2.0
-  mockito: ^4.1.1
+  bloc_test: ^9.0.2
+  flutter_lints: ^1.0.4
