--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,4 +32,5 @@ jobs:
       - name: Validating changelog
         uses: zattoo/changelog@v1
         with:
+          exclude: ".github/**"
           token: ${{ secrets.GITHUB_TOKEN }}
