Attempt home dir source.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,12 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Validating changelog
-        uses: zattoo/changelog@1.7.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          exclude: 'analysis_options.yaml, CONTRIBUTING.md, coverage/**, .gitignore, .github/**, .metadata'
-
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '2.8.x'
@@ -34,3 +28,10 @@ jobs:
         uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
         with:
           min_coverage: 75
+
+      - name: Validating changelog
+        uses: zattoo/changelog@1.7.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          sources: '/home/runner/work/flutter_bloc_list_manager/flutter_bloc_list_manager/'
+          exclude: 'analysis_options.yaml, CONTRIBUTING.md, coverage/**, .gitignore, .github/**, .metadata'
